# obs-studio-plugin-openmax

./: CMakeLists.txt  README.md  helpers.c  obs-openmax-callback.c  obs-openmax-create.c  obs-openmax-destroy.c  obs-openmax-encode.c  obs-openmax-helpers.c  obs-openmax-optional.c  obs-openmax-plugin-main.c  obs-openmax.c  obs-openmax.h  openmax-encoder.c  openmax.h  optional.c  plugin-main.c  properties.c
data/locale/: en-US.ini
